# duper-disper

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: build.yml
installer/: build.ps1  duper-disper.nsi
src/: lib.rs  main.rs
src/audio/: mod.rs
src/config/: mod.rs
src/context/: mod.rs
src/hotkey/: mod.rs
src/insertion/: mod.rs
src/refinement/: mod.rs
src/transcription/: cloud.rs  local.rs  mod.rs
src/ui/: mod.rs  overlay.rs  settings.rs  tray.rs
