[package]
name = "duper-disper"
version = "0.1.5"
edition = "2021"
description = "Fast push-to-talk voice transcription and refinement tool"

[features]
default = ["ui", "audio-capture", "local-stt"]
ui = ["dep:tray-icon", "dep:eframe", "dep:winit"]
audio-capture = ["dep:cpal"]
local-stt = ["dep:whisper-rs"]

[dependencies]
# Audio capture (optional, needs ALSA)
cpal = { version = "0.15", optional = true }
hound = "3.5"

# Whisper transcription (optional, needs whisper.cpp)
whisper-rs = { version = "0.13", optional = true }

# LLM refinement (OpenAI-compatible API client)
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking", "multipart"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# System tray (optional, needs GTK)
tray-icon = { version = "0.19", optional = true }

# Cross-platform clipboard
arboard = "3"

# UI toolkit for overlay / settings (optional, needs GTK/Pango)
eframe = { version = "0.30", optional = true }
winit = { version = "0.30", optional = true }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Config
toml = "0.8"
dirs = "6"

# Misc
anyhow = "1"
base64 = "0.22"

# Windows-specific APIs (input simulation, context capture)
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_DataExchange",
    "Win32_System_Ole",
    "Win32_System_Com",
    "Win32_Graphics_Gdi",
    "Win32_UI_Accessibility",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
] }
enigo = "0.2"
screenshots = "0.8"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
wiremock = "0.6"
serde_json = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
